--- a/package.json
+++ b/package.json
@@ -12,16 +12,31 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.127.0",
+    "@graphql-codegen/cli": "^2.2.0",
+    "@graphql-codegen/typescript": "^2.2.2",
+    "@graphql-codegen/typescript-operations": "1.17.15",
+    "@graphql-codegen/typescript-react-apollo": "2.2.3",
+    "@types/async": "^3.2.9",
+    "@types/gremlin": "^3.5.0",
     "@types/jest": "^26.0.10",
-    "@types/node": "10.17.27",
+    "@types/node": "^16.11.6",
+    "async": "^3.2.2",
+    "aws-cdk": "1.127.0",
+    "gremlin": "^3.5.1",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.127.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-appsync": "1.127.0",
+    "@aws-cdk/aws-ec2": "1.127.0",
+    "@aws-cdk/aws-iam": "1.127.0",
     "@aws-cdk/core": "1.127.0",
+    "@types/aws-lambda": "^8.10.85",
+    "@types/jsonwebtoken": "^8.5.5",
+    "aws-lambda": "^1.0.7",
+    "jsonwebtoken": "^8.5.1",
     "source-map-support": "^0.5.16"
   }
 }
